reports/testbook.log
Traceback (most recent call last):
  File "/home/bullsec/.local/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/bullsec/.local/lib/python3.8/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/bullsec/.local/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/bullsec/.local/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/bullsec/.local/lib/python3.8/site-packages/nbclient/client.py", line 559, in async_execute
    await self.async_execute_cell(
  File "/home/bullsec/.local/lib/python3.8/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/bullsec/.local/lib/python3.8/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
if "domain" in req.text:
    
------------------

[0;36m  File [0;32m"<ipython-input-4-4d4389ae6c1d>"[0;36m, line [0;32m2[0m
[0;31m    [0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unexpected EOF while parsing

SyntaxError: unexpected EOF while parsing (<ipython-input-4-4d4389ae6c1d>, line 2)

